# graph-rs-sdk

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  appveyor.yml  async_default.txt  env.json.enc  rust-toolchain  rustfmt.toml  toolchain.toml
derive_from_to_file/: Cargo.toml
derive_from_to_file/src/: lib.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs  test_server.rs
graph-codegen/: Cargo.toml
graph-codegen/clients/: activities.json  appCatalogs.json  applications.json
graph-codegen/src/: lib.rs
graph-codegen/src/api_types/: metadata.rs  metadata_modifier.rs  method_macro.rs  mod.rs  mod_file_writer.rs  request_client.rs  request_function.rs  request_metadata.rs  request_task.rs  requests.rs  resource_parsing_info.rs  response_body.rs  write_configuration.rs
graph-codegen/src/builder/: client.rs  link.rs  mod.rs  register_client.rs  spec.rs  spec_formatter.rs  stored_client.rs
graph-codegen/src/error/: mod.rs
graph-codegen/src/filter/: mod.rs
graph-codegen/src/generator/: builders.rs  gen.rs  mod.rs
graph-codegen/src/macros/: macro_queue_writer.rs  mod.rs  writer.rs
graph-codegen/src/openapi/: components.rs  contact.rs  discriminator.rs  either_t.rs  encoding.rs  example.rs  external_documentation.rs  header.rs  info.rs  license.rs  link.rs  media_type.rs  mod.rs  oauth_flow.rs  oauth_flows.rs  openapi_parser.rs  operation.rs  parameter.rs  path_item.rs  paths.rs  reference.rs  request_body.rs  response.rs  responses.rs  schema.rs  security_requirement.rs  security_scheme.rs  server.rs  server_variable.rs  tag.rs  xml.rs
graph-codegen/src/parsed_metadata/: access_package_assignment_approvals.json  access_package_assignment_approvals_openapi.json  access_package_assignment_approvals_parsing_info.json  access_packages.json  access_packages_openapi.json  access_packages_parsing_info.json  access_review_definitions.json  access_review_definitions_openapi.json  access_review_definitions_parsing_info.json  access_reviews.json  access_reviews_definitions.json  access_reviews_definitions_instances.json  access_reviews_definitions_instances_openapi.json  access_reviews_definitions_instances_parsing_info.json  access_reviews_definitions_instances_stages.json  access_reviews_definitions_instances_stages_openapi.json  access_reviews_definitions_instances_stages_parsing_info.json  access_reviews_definitions_openapi.json  access_reviews_definitions_parsing_info.json  access_reviews_openapi.json  access_reviews_parsing_info.json  activities.json  activities_openapi.json  activities_parsing_info.json  admin.json  admin_openapi.json  admin_parsing_info.json  administrative_units.json  administrative_units_members.json  administrative_units_members_openapi.json  administrative_units_members_parsing_info.json  administrative_units_openapi.json  administrative_units_parsing_info.json  agreement_acceptances.json  agreement_acceptances_openapi.json  agreement_acceptances_parsing_info.json  agreements.json  agreements_openapi.json  agreements_parsing_info.json  android_managed_app_protections.json  (+411 more)
graph-codegen/src/parser/: client_resource.rs  directory_mod.rs  error.rs  filter.rs  mod.rs  parse.rs  parser_settings.rs  paths.rs  request.rs  resource.rs  spec.rs
graph-codegen/src/settings/: api_client_link.rs  client_link_settings.rs  custom_requests.rs  imports.rs  method_macro_modifier.rs  mod.rs  operation_modifier.rs  path_filter.rs  resource_settings.rs
graph-codegen/src/traits/: filter_metadata.rs  filter_path.rs  hash_set_ext.rs  hashmapext.rs  mod.rs  parse.rs  request.rs  vec_ext.rs  vecext.rs
graph-core/: Cargo.toml  README.md
graph-core/src/: lib.rs
graph-core/src/cache/: cache_store.rs  in_memory_cache_store.rs  mod.rs  token_cache.rs
graph-core/src/crypto/: mod.rs  pkce.rs
graph-core/src/http/: mod.rs  response_builder_ext.rs  response_converter.rs
graph-core/src/identity/: client_application.rs  jwk.rs  jwks.rs  mod.rs
graph-core/src/resource/: mod.rs  resource_identity.rs
graph-error/: Cargo.toml  README.md
graph-error/src/: authorization_failure.rs  download.rs  error.rs  graph_failure.rs  headers.rs  internal.rs  io_error.rs  lib.rs  result.rs  webview_error.rs
graph-extensions/: Cargo.toml
graph-extensions/src/: lib.rs
graph-extensions/src/cache/: cache_store.rs  in_memory_credential_store.rs  mod.rs  token_store.rs  token_store_providers.rs  token_watch_task.rs
graph-extensions/src/crypto/: mod.rs
graph-extensions/src/http/: mod.rs  response_converter.rs
graph-extensions/src/token/: client_application.rs  id_token.rs  mod.rs  msal_token.rs
graph-extensions/src/web/: interactive_authenticator.rs  interactive_web_view.rs  mod.rs  web_view_options.rs
graph-http/: Cargo.toml  README.md
graph-http/.cargo/: config.toml
graph-http/src/: byte_range.rs  byterange.rs  client.rs  dispatch.rs  file_config.rs  http_client.rs  http_pipeline.rs  into_response.rs  intoresponse.rs  io_tools.rs  iotools.rs  lib.rs  next_link.rs  odata_query.rs  registry.rs  request.rs  request_components.rs  request_handler.rs  resource_identifier.rs  response.rs  response_handler.rs  tower_services.rs
graph-http/src/async_client/: client.rs
graph-oauth/: Cargo.toml  README.md
graph-oauth/src/: access_token.rs  accesstoken.rs  auth.rs  auth_response_query.rs  builder.rs  device_code.rs  discovery.rs  encode.rs  grants.rs  graphheaders.rs  id_token.rs  idtoken.rs  jwt.rs  lib.rs  oauth_error.rs  oauth_serializer.rs  oautherror.rs  oauthtools.rs  stdop.rs
graph-oauth/test_files/: README.md
graph-oauth/tests/: access_token_tests.rs  discovery_tests.rs  jwt_tests.rs  oauth_tests.rs
graph-rs-interactive-auth/: Cargo.toml
graph-rs-sdk-webview/: Cargo.toml
graph-rs-sdk-webview/src/: main.rs
graph-sdk-abstractions/: Cargo.toml
graph-sdk-abstractions/src/: backing_store.rs  lib.rs
jsonfile/: Cargo.toml
jsonfile/src/: lib.rs
test-tools/: Cargo.toml
test-tools/.cargo/: config.toml
test-tools/src/: ci.rs  common.rs  drive.rs  files.rs  lib.rs  oauth.rs  oauth_request.rs  oauthrequest.rs
(+1112 files in other folders)
