[package]
name = "graph-rs-sdk"
version = "1.1.0"
authors = ["sreeise"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs-sdk"
description = "Rust SDK Client for Microsoft Graph and the Microsoft Graph Api"

exclude = [
    "test_files/*",
    "tests/*",
    "examples/*",
    "test-tools/*",
    "graph-codegen/*"
]
keywords = ["onedrive", "microsoft", "sdk", "api", "oauth"]
categories = ["authentication", "web-programming::http-client"]

[workspace]
members = [
    "graph-oauth",
    "graph-error",
    "test-tools",
    "graph-codegen",
    "graph-http",
    "graph-core",
]

[dependencies]
handlebars = "2.0.4" # TODO: Update to 4
reqwest = { version = "0.11.16", default-features=false, features = ["json", "gzip", "blocking", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
lazy_static = "1.4.0"

graph-oauth = { path = "./graph-oauth", version = "1.0.0", default-features=false }
graph-http = { path = "./graph-http", version = "1.1.0", default-features=false }
graph-error = { path = "./graph-error", version = "0.2.2" }
graph-core = { path = "./graph-core", version = "0.4.0" }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "graph-http/native-tls", "graph-oauth/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "graph-http/rustls-tls", "graph-oauth/rustls-tls"]
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
trust-dns = ["reqwest/trust-dns"]

[dev-dependencies]
bytes = { version = "1.4.0" }
futures = "0.3"
lazy_static = "1.4"
tokio = { version = "1.27.0", features = ["full"] }
warp = "0.3.3"

graph-codegen = { path = "./graph-codegen", version = "0.0.1" }
test-tools = { path = "./test-tools", version = "0.0.1" }

[profile.release]
debug = false
