[package]
name = "graph-rs-sdk"
version = "1.1.1"
authors = ["sreeise"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs-sdk"
description = "Rust SDK Client for Microsoft Graph and the Microsoft Graph Api"

exclude = [
    "test_files/*",
    "tests/*",
    "examples/*",
    "test-tools/*",
    "graph-codegen/*"
]
keywords = ["onedrive", "microsoft", "sdk", "api", "oauth"]
categories = ["authentication", "web-programming::http-client"]

[workspace]
members = [
    "graph-oauth",
    "graph-error",
    "test-tools",
    "graph-codegen",
    "graph-http",
    "graph-core",
    "graph-extensions"
]

[dependencies]
handlebars = "2.0.4" # TODO: Update to 4
reqwest = { version = "0.11.16", default-features=false, features = ["json", "gzip", "blocking", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
lazy_static = "1.4.0"

graph-oauth = { path = "./graph-oauth", version = "1.0.2", default-features=false }
graph-http = { path = "./graph-http", version = "1.1.0", default-features=false }
graph-error = { path = "./graph-error", version = "0.2.2" }
graph-core = { path = "./graph-core", version = "0.4.0" }

# When updating or adding new features to this or dependent crates run
# cargo tree -e features -i graph-rs-sdk
# Use this command verify that the dependency is not
# enabled by default due to another package having it as a dependency
# without default-features=false.

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "graph-http/native-tls", "graph-oauth/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "graph-http/rustls-tls", "graph-oauth/rustls-tls"]
brotli = ["reqwest/brotli", "graph-http/brotli", "graph-oauth/brotli"]
deflate = ["reqwest/deflate", "graph-http/deflate", "graph-oauth/deflate"]
trust-dns = ["reqwest/trust-dns", "graph-http/trust-dns", "graph-oauth/trust-dns"]
openssl = ["graph-oauth/openssl"]

[dev-dependencies]
bytes = { version = "1.4.0" }
futures = "0.3"
lazy_static = "1.4"
tokio = { version = "1.27.0", features = ["full"] }
warp = { version = "0.3.5" }
webbrowser = "0.8.7"
anyhow = "1.0.69"
log = "0.4"
pretty_env_logger = "0.4"
from_as = "0.2.0"
actix = "0.13.0"
actix-rt = "2.8.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

graph-codegen = { path = "./graph-codegen", version = "0.0.1" }
test-tools = { path = "./test-tools", version = "0.0.1" }

[profile.release]
debug = false

[[example]]
name = "oauth_certificate_main"
path = "examples/oauth_certificate/main.rs"
required-features = ["openssl"]
