[package]
name = "derive_from_to_file"
version = "0.1.0"
authors = ["sreeise"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
serde = "1.0.88"
serde_json = "1.0.38"
serde_derive = "1.0.88"
base64 = "0.10.1"
syn = "0.15.29"
quote = "0.6.11"
transform-request = { path = "../transform-request" }