[package]
name = "graph-codegen"
version = "0.0.1"
authors = ["sreeise"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs"
description = "Microsoft Graph Api Client - Codegen"
publish = false

[dependencies]
bytes = "1"
from_as = "0.1"
Inflector = "0.11.4"
lazy_static = "1.4.0"
rayon = "1.5.0"
regex = "1"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.8"
strum = { version = "0.21", features = ["derive"] }
either = { version = "1.6.1", features = ["serde"] }
handlebars = "2.0.2"

graph-http = { path = "../graph-http" }
graph-core = { path = "../graph-core" }
graph-error = { path = "../graph-error" }
