[package]
name = "graph-core"
version = "0.4.0"
authors = ["sreeise"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs-sdk"
description = "Common types for the graph-rs-sdk crate"

keywords = ["onedrive", "microsoft", "microsoft-graph", "api"]
categories = ["web-programming::http-client"]

[dependencies]
Inflector = "0.11.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.24.1", features = ["derive"] }
remain = "0.2.6"
