[package]
name = "graph-core"
version = "0.4.0"
authors = ["sreeise"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs-sdk"
description = "Common types and traits for the graph-rs-sdk crate"

[dependencies]
async-stream = "0.3"
async-trait = "0.1.35"
dyn-clone = "1.0.14"
Inflector = "0.11.4"
http = "0.2.9"
percent-encoding = "2"
reqwest = { version = "0.11.16", default-features=false, features = ["json", "gzip", "blocking", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.25.0", features = ["derive"] }
remain = "0.2.6"
tracing = "0.1.37"
url = { version = "2", features = ["serde"] }

graph-error = { path = "../graph-error"  }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
trust-dns = ["reqwest/trust-dns"]
