[package]
name = "graph-core"
version = "2.0.1"
authors = ["sreeise"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs-sdk"
description = "Common types and traits for the graph-rs-sdk crate"
homepage = "https://github.com/sreeise/graph-rs-sdk"

[dependencies]
async-stream = "0.3"
async-trait = "0.1.35"
base64 = "0.21.0"
dyn-clone = "1.0.14"
Inflector = "0.11.4"
http = { workspace = true }
jsonwebtoken = "9.1.0"
parking_lot = "0.12.1"
percent-encoding = "2"
reqwest = { workspace = true, default-features=false, features = ["json", "gzip", "blocking", "stream"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.25.0", features = ["derive"] }
remain = "0.2.6"
tracing = "0.1.37"
url = { version = "2", features = ["serde"] }

graph-error = { version = "0.3.1", path = "../graph-error"  }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
trust-dns = ["reqwest/trust-dns"]
