[package]
name = "graph-error"
version = "0.1.2"
authors = ["sreeise"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs"
description = "Graph Api error types and handling for the graph-rs project"

[dependencies]
async-trait = "0.1"
base64 = "0.21.0"
futures = "0.3"
handlebars = "2.0.2"
http-serde = "1"
hyper = "0.14"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking"] }
ring = "0.16.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
thiserror = "1"
tokio = { version = "1.25.0", features = ["full"] }
url = "2"
