[package]
name = "graph-error"
version = "0.2.0"
authors = ["sreeise"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs"
description = "Graph Api error types and handling for the graph-rs project"

keywords = ["onedrive", "microsoft", "microsoft-graph", "api", "oauth"]
categories = ["authentication", "web-programming::http-client"]

[dependencies]
async-trait = "0.1"
base64 = "0.21.0"
futures = "0.3"
handlebars = "2.0.2"
http-serde = "1"
http = "0.2.9"
reqwest = { version = "0.11.16", default-features=false, features = ["json", "gzip", "blocking", "stream"] }
ring = "0.16.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.25.0", features = ["full"] }
url = "2"
