[package]
name = "graph-error"
version = "0.3.0"
authors = ["sreeise"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs-sdk"
description = "Graph Api error types and handling for the graph-rs-sdk crate"
homepage = "https://github.com/sreeise/graph-rs-sdk"

keywords = ["onedrive", "microsoft", "microsoft-graph", "api", "oauth"]
categories = ["authentication", "web-programming::http-client"]

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"]}
base64 = "0.21.0"
futures = "0.3"
handlebars = "2.0.2"
http-serde = "1"
http = { workspace = true }
jsonwebtoken = "9.1.0"
reqwest = { workspace = true, default-features=false, features = ["json", "gzip", "blocking", "stream"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.25.0", features = ["full"] }
url = "2"
x509-parser = "0.15.0"
uuid = { version = "1.3.1" }
