[package]
name = "graph-extensions"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs-sdk"
description = "Extensions and utilities used across multiple crates that make up the graph-rs-sdk crate"

[dependencies]
async-stream = "0.3"
async-trait = "0.1.35"
bytes = { version = "1.4.0", features = ["serde"] }
futures = "0.3.28"
http = "0.2.9"
reqwest = { version = "0.11.16", default-features=false, features = ["json", "gzip", "blocking", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.27.0", features = ["full"] }
url = { version = "2", features = ["serde"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
trust-dns = ["reqwest/trust-dns"]
