[package]
name = "graph-http"
version = "1.1.0"
authors = ["sreeise"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs-sdk"
description = "Http client and utilities for the graph-rs-sdk crate"

[dependencies]
async-stream = "0.3"
async-trait = "0.1.35"
bytes = { version = "1.4.0", features = ["serde"] }
futures = "0.3.28"
handlebars = "2.0.4"
http = "0.2.9"
percent-encoding = "2"
reqwest = { version = "0.11.16", default-features=false, features = ["json", "gzip", "blocking", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
thiserror = "1"
tokio = { version = "1.27.0", features = ["full"] }
url = { version = "2", features = ["serde"] }

graph-error = { path = "../graph-error"  }
graph-core = { path = "../graph-core" }
graph-extensions = { path = "../graph-extensions" }
graph-oauth = { path = "../graph-oauth", version = "1.0.2", default-features=false }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
trust-dns = ["reqwest/trust-dns"]
openssl = ["graph-oauth/openssl"]
