[package]
name = "graph-http"
version = "2.0.1"
authors = ["sreeise"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs-sdk"
description = "Http client and utilities for the graph-rs-sdk crate"
homepage = "https://github.com/sreeise/graph-rs-sdk"

[dependencies]
async-stream = "0.3"
async-trait = "0.1.35"
bytes = { version = "1.4.0", features = ["serde"] }
futures = "0.3.28"
handlebars = "2.0.4"
http = { workspace = true }
percent-encoding = "2"
reqwest = { workspace = true, default-features=false, features = ["json", "gzip", "blocking", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
thiserror = "1"
tokio = { version = "1.27.0", features = ["full", "tracing"] }
url = { version = "2", features = ["serde"] }

graph-error = { path = "../graph-error"  }
graph-core = { path = "../graph-core", default-features = false }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "graph-core/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "graph-core/rustls-tls"]
brotli = ["reqwest/brotli", "graph-core/brotli"]
deflate = ["reqwest/deflate", "graph-core/deflate"]
trust-dns = ["reqwest/trust-dns", "graph-core/trust-dns"]
socks = ["reqwest/socks"]
test-util = []
