[package]
name = "graph-oauth"
version = "1.0.2"
authors = ["sreeise"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sreeise/graph-rs-sdk"
description = "OAuth client implementing the OAuth 2.0 and OpenID Connect protocols for Microsoft Identity Platform"

keywords = ["microsoft", "oauth", "authentication", "authorization"]
categories = ["authentication", "web-programming::http-client"]

exclude = [
    "src/identity/credentials/test/*"
]

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"]}
async-trait = "0.1.35"
base64 = "0.21.0"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-humanize = "0.2.2"
hex = "0.4.3"
openssl = { version = "0.10", optional=true }
reqwest = { version = "0.11.16", default-features=false, features = ["json", "gzip", "blocking", "stream"] }
ring = "0.16.15"
serde = { version = "1", features = ["derive"] }
serde-aux = "4.1.2"
serde_json = "1"
serde_urlencoded = "0.7.1"
strum = { version = "0.24.1", features = ["derive"] }
url = "2"
time = { version = "0.3.10", features = ["local-offset"] }
webbrowser = "0.8.7"
wry = "0.28.3"
uuid = { version = "1.3.1", features = ["v4"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.27.0", features = ["full"] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
http-body-util = "0.1.0-rc.2"

graph-error = { path = "../graph-error" }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
trust-dns = ["reqwest/trust-dns"]
openssl = ["dep:openssl"]

[[test]]
name = "x509_certificate_tests"
path = "src/identity/credentials/x509_certificate.rs"
required-features = ["openssl"]
