[package]
name = "graph-sdk-abstractions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix = "0.13.0"
# actix-rt = "2.8.0"
http = "0.2.9"
reqwest = { version = "0.11.16", default-features=false, features = ["json", "gzip", "blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tower = { version="0.4.13", features=["full"] }
tower-service = "0.3.2"
tower-layer = "0.3.2"
pin-project = "1.1.1"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
trust-dns = ["reqwest/trust-dns"]
