[package]
name = "test-tools"
version = "0.0.1"
authors = ["sreeise"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs"
description = "Microsoft Graph Api Client"
publish = false

[dependencies]
url = "2"
rand = "0.8"
from_as = { version = "0.1.0", git = "https://github.com/sreeise/from_as" }
serde = "1"
serde_json = "1"
serde_derive = "1"
toml = "0.5"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
graph-http = { path = "../graph-http" }
graph-error = { path = "../graph-error" }
graph-rs-sdk = { path = "../" }
# graph-http = "0.0.2"
# graph-error = "0.0.1"

[features]
default = ["nightly"]
nightly = []