[package]
name = "test-tools"
version = "0.0.1"
authors = ["sreeise"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sreeise/graph-rs-sdk"
description = "Microsoft Graph Api Client"
publish = false

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"]}
futures = "0.3"
from_as = "0.2.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
rand = "0.8"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7.2"
tokio = { version = "1.25.0", features = ["full"] }
url = "2"

graph-core = { path = "../graph-core" }
graph-http = { path = "../graph-http" }
graph-error = { path = "../graph-error" }
graph-rs-sdk = { path = "../", features = ["test-util"] }
