[package]
name = "examples-common"
version = "0.1.0"
authors = ["Elliott Clarke <elliott.clarke.ext@siemens-energy.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
from_as = "0.1"
lazy_static = "1.4"
regex = "1"
warp = "0.3"
async-std = "1"
async-trait = "0.1"
base64 = "0.13"
futures = "0.3"
handlebars = "2.0.2" # TODO: Update to 4
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
strum = { version = "0.21", features = ["derive"] }
rayon = "1"
tokio = { version = "1", features = ["full"] }
url = "2"